Создал ICrossword, Crossword и тесты для Crossword, прошел тест IncorrectCrossword()

--- a/JapaneseCrossword/JapaneseCrossword.csproj
+++ b/JapaneseCrossword/JapaneseCrossword.csproj
@@ -44,8 +44,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Crossword.cs" />
     <Compile Include="CrosswordSolver.cs" />
     <Compile Include="CrosswordSolverTests.cs" />
+    <Compile Include="CrosswordTests.cs" />
+    <Compile Include="ICrossword.cs" />
     <Compile Include="ICrosswordSolver.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
