добавил перечисление CellState и свойство Picture в кроссворд

--- a/JapaneseCrossword/JapaneseCrossword.csproj
+++ b/JapaneseCrossword/JapaneseCrossword.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CellState.cs" />
     <Compile Include="Crossword.cs" />
     <Compile Include="CrosswordSolver.cs" />
     <Compile Include="CrosswordSolverTests.cs" />
