--- a/JapaneseCrossword/JapaneseCrossword.csproj
+++ b/JapaneseCrossword/JapaneseCrossword.csproj
@@ -44,13 +44,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Block.cs" />
     <Compile Include="CellState.cs" />
     <Compile Include="Crossword.cs" />
     <Compile Include="CrosswordSolver.cs" />
     <Compile Include="CrosswordSolverTests.cs" />
     <Compile Include="CrosswordTests.cs" />
+    <Compile Include="IBlock.cs" />
     <Compile Include="ICrossword.cs" />
     <Compile Include="ICrosswordSolver.cs" />
+    <Compile Include="ILine.cs" />
+    <Compile Include="Line.cs" />
+    <Compile Include="LineTests.cs" />
+    <Compile Include="LineType.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SolutionStatus.cs" />
