добавлен интерфейс ICrosswordSolverAlgorithm и класс IteratedLineAnalysis

--- a/JapaneseCrossword/JapaneseCrossword.csproj
+++ b/JapaneseCrossword/JapaneseCrossword.csproj
@@ -53,8 +53,10 @@
     <Compile Include="IBlock.cs" />
     <Compile Include="ICrossword.cs" />
     <Compile Include="ICrosswordSolver.cs" />
+    <Compile Include="ICrosswordSolverAlgorithm.cs" />
     <Compile Include="ILine.cs" />
     <Compile Include="ILineProvider.cs" />
+    <Compile Include="IteratedLineAnalysis.cs" />
     <Compile Include="Line.cs" />
     <Compile Include="LineProvider.cs" />
     <Compile Include="LineProviderTests.cs" />
