--- a/JapaneseCrossword/JapaneseCrossword.csproj
+++ b/JapaneseCrossword/JapaneseCrossword.csproj
@@ -48,32 +48,28 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Enums\Cell.cs" />
     <Compile Include="Solvers\Utils\Block.cs" />
     <Compile Include="Enums\CellState.cs" />
-    <Compile Include="Enums\Extensions\CellStateExtensions.cs" />
-    <Compile Include="Extensions\CharExtensions.cs" />
-    <Compile Include="Crossword.cs" />
+    <Compile Include="CrosswordDescription.cs" />
     <Compile Include="Solvers\CrosswordSolver.cs" />
     <Compile Include="Solvers\Utils\Interfaces\IBlock.cs" />
-    <Compile Include="Interfaces\ICrossword.cs" />
+    <Compile Include="Interfaces\ICrosswordDescription.cs" />
     <Compile Include="Solvers\Interfaces\ICrosswordSolver.cs" />
     <Compile Include="Solvers\Algoritms\Interfaces\ICrosswordSolverAlgorithm.cs" />
     <Compile Include="Solvers\Utils\Interfaces\ILine.cs" />
     <Compile Include="Solvers\Algoritms\Utils\Interfaces\ILineAnalysisResult.cs" />
     <Compile Include="Solvers\Algoritms\Utils\Interfaces\ILineAnalyzer.cs" />
-    <Compile Include="Solvers\Utils\Interfaces\ILineProvider.cs" />
     <Compile Include="Solvers\Algoritms\IteratedLineAnalysis.cs" />
     <Compile Include="Solvers\Utils\Line.cs" />
     <Compile Include="Solvers\Algoritms\Utils\LineAnalysisResult.cs" />
     <Compile Include="Solvers\Algoritms\Utils\LineAnalyzer.cs" />
-    <Compile Include="Solvers\Utils\LineProvider.cs" />
     <Compile Include="Solvers\Utils\Enums\LineType.cs" />
     <Compile Include="Solvers\Utils\Enums\Extensions\LineTypeExtensions.cs" />
     <Compile Include="Solvers\Algoritms\MultiThreadedIteratedLineAnalysis.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Enums\SolutionStatus.cs" />
-    <Compile Include="Extensions\StringExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
