--- a/JapaneseCrosswordTests/JapaneseCrosswordTests.csproj
+++ b/JapaneseCrosswordTests/JapaneseCrosswordTests.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CellTests.cs" />
     <Compile Include="CrosswordSolverTests.cs" />
     <Compile Include="CrosswordTests.cs" />
     <Compile Include="IteratedLineAnalysisTests.cs" />
