добавлено сохранение результатов вызовов TryBlock в LineAnalyzer и соответствующий Enum (TryBlockResult) для повышения производительности (на кроссворде цветок выросла примерно в 10 раз), подкорректирован класс Line

--- a/JapaneseCrossword/JapaneseCrossword.csproj
+++ b/JapaneseCrossword/JapaneseCrossword.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Solvers\Algoritms\Utils\Enums\TryBlockResult.cs" />
     <Compile Include="Solvers\Utils\Cell.cs" />
     <Compile Include="Solvers\Utils\Block.cs" />
     <Compile Include="Solvers\Utils\Enums\CellState.cs" />
