--- a/JapaneseCrosswordTests/JapaneseCrosswordTests.csproj
+++ b/JapaneseCrosswordTests/JapaneseCrosswordTests.csproj
@@ -70,6 +70,12 @@
     <Content Include="TestFiles\IncorrectCrossword.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="TestFiles\Japanese.solved.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="TestFiles\Japanese.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="TestFiles\SampleInput.solved.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
