--- a/Balancer/Balancer.csproj
+++ b/Balancer/Balancer.csproj
@@ -4,7 +4,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>104aae18-2153-4417-9029-23d6d9cfc513</ProjectGuid>
+    <ProjectGuid>{FB7CFEF2-8CE8-4ED5-A60C-90162B267323}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Balancer</RootNamespace>
@@ -46,6 +46,13 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="Readme.md" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\HashServer\HashServer.csproj">
+      <Project>{26e99604-5e67-4f52-8c0e-63879569c3b0}</Project>
+      <Name>HashServer</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
