подкорректированы пространства имен и Listener

--- a/Balancer/Balancer.csproj
+++ b/Balancer/Balancer.csproj
@@ -49,9 +49,9 @@
     <None Include="Readme.md" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\HashServer\HashServer.csproj">
-      <Project>{26e99604-5e67-4f52-8c0e-63879569c3b0}</Project>
-      <Name>HashServer</Name>
+    <ProjectReference Include="..\Listeners\Listeners.csproj">
+      <Project>{ad103dcd-6549-411d-ab66-70d4aa88c026}</Project>
+      <Name>Listeners</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
