--- a/Balancer/Balancer.csproj
+++ b/Balancer/Balancer.csproj
@@ -56,7 +56,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="serversTopology.txt">
+    <Content Include="topologyServers.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
