--- a/Balancer/Balancer.csproj
+++ b/Balancer/Balancer.csproj
@@ -55,6 +55,8 @@
     <Compile Include="Balancer_should.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Replica.cs" />
+    <Compile Include="Replica_should.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
