--- a/Balancer/Balancer.csproj
+++ b/Balancer/Balancer.csproj
@@ -53,6 +53,7 @@
   <ItemGroup>
     <Compile Include="Balancer.cs" />
     <Compile Include="Balancer_should.cs" />
+    <Compile Include="HttpListener.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Replica.cs" />
