--- a/Balancer/Balancer.csproj
+++ b/Balancer/Balancer.csproj
@@ -56,6 +56,7 @@
     <Compile Include="HttpListener.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QueryProcessor.cs" />
     <Compile Include="Replica.cs" />
     <Compile Include="Replica_should.cs" />
   </ItemGroup>
