ожидание ответа от реплики сделано асинхронным с поддержкой таймаута (реализованной в виде расширения Task), рефакторинг тестов и добавление проверки таймаута

--- a/Balancer/Balancer.csproj
+++ b/Balancer/Balancer.csproj
@@ -59,6 +59,7 @@
     <Compile Include="QueryProcessor.cs" />
     <Compile Include="Replica.cs" />
     <Compile Include="Replica_should.cs" />
+    <Compile Include="TaskExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
